# score-weighted-matrix-by-multi-objective-optimization

./: .gitignore  README.md  pyproject.toml
data/data/: test1_DRB10101.txt  test2_DRB10101.txt  test4_DRB10101.txt  train1.txt  train1_DRB10101.txt  train2.txt  train5_DRB10101.txt
data/data/all_peptides/: test2.txt  test4.txt  test5.txt
data/datasets/netmhciipan-3.2/: test3_DRB10101.txt  test5_DRB10101.txt  train2_DRB10101.txt  train3_DRB10101.txt  train4_DRB10101.txt
data/datasets/netmhciipan-4.0/: all_DRB1_0101.txt  test_BA2_DRB1_0101.txt  test_BA3_DRB1_0101.txt  train_BA1_DRB1_0101.txt  train_BA3_DRB1_0101.txt  train_BA4_DRB1_0101.txt  train_BA5_DRB1_0101.txt
data/matrices/: clusterfit3  clustermsd3  clustermsd9  fit9.1  rmsd9.2
data/matrices_random/: m1  m12  m13  m14  m17  m19  m20  m4  m6  m7  m8
dev/data/matrices/: clusterfit9  clustermsd3  fit3.2  fit9.2  rmsd3.1  rmsd3.2  rmsd9.1
dev/data/matrices_mix-2/: fit9.1-fit3.1-fit3.2-fit3.2-fit9.1-fit9.2-fit9.1-fit3.2-clustermsd3  fit9.1-fit3.1-fit3.2-fit3.2-fit9.1-fit9.2-fit9.1-fit3.2-fit9.2  fit9.1-fit3.1-fit3.2-fit3.2-fit9.1-fit9.2-fit9.1-fit3.2-rmsd3.2  fit9.1-fit3.1-fit3.2-fit3.2-fit9.1-fit9.2-rmsd3.2-fit3.2-clustermsd3  fit9.1-fit3.1-fit3.2-fit3.2-fit9.1-fit9.2-rmsd3.2-fit3.2-fit9.2  fit9.1-fit3.1-fit3.2-fit3.2-fit9.1-fit9.2-rmsd3.2-fit3.2-rmsd3.2  fit9.1-fit3.1-fit3.2-fit3.2-fit9.1-rmsd3.2-fit9.1-fit3.2-clustermsd3  fit9.1-fit3.1-fit3.2-fit3.2-fit9.1-rmsd3.2-fit9.1-fit3.2-fit9.2  fit9.1-fit3.1-fit3.2-fit3.2-fit9.1-rmsd3.2-fit9.1-fit3.2-rmsd3.2  fit9.1-fit3.1-fit3.2-fit3.2-fit9.1-rmsd3.2-rmsd3.2-fit3.2-clustermsd3  fit9.1-fit3.1-fit3.2-fit3.2-fit9.1-rmsd3.2-rmsd3.2-fit3.2-fit9.2  fit9.1-fit3.1-fit3.2-fit3.2-fit9.1-rmsd3.2-rmsd3.2-fit3.2-rmsd3.2  (+133 more)
score-weighted-matrix-by-moo/: fit3.1  run-pcc-auc.sh  run-predict.sh  run.sh
(+536 files in other folders)
