[tool.poetry]
name = "score-weighted-matrix-by-multi-objective-optimization"
version = "0.1.0"
description = "GA implementation of multi-objective-optimization using Deap library for desing score-weighted-matrix"
authors = ["Grupo Biomatemáticas - FIDIC <fidic.biomath@gmail.com>"]
license = "GPLv3.0"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"
deap = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
